--- a/lesson24/src/main/webapp/WEB-INF/web.xml
+++ b/lesson24/src/main/webapp/WEB-INF/web.xml
@@ -16,4 +16,35 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
         <param-name>db_password</param-name>
         <param-value>postgres</param-value>
     </context-param>
+
+    <servlet>
+        <servlet-name>Main</servlet-name>
+        <jsp-file>/main.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Main</servlet-name>
+        <url-pattern>/main</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Registration</servlet-name>
+        <jsp-file>/registrationPage.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Registration</servlet-name>
+        <url-pattern>/registrationPage</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <jsp-file>/login.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
 </web-app>
